# kaoyan-agent

./: .env.example  .gitignore  .mcp.json  AI面试知识点.md  README.md  deploy.ps1  deploy.sh  requirements.txt  setup-firewall.ps1  start-prod.bat  start.bat  start.sh
backend/: pyproject.toml  reclass_check.txt  requirements.txt  school_analysis.txt
backend/app/: config.py  main.py
backend/data/: yantu_schools.json
backend/migrations/: __init__.py  alembic.ini  env.py
backend/scripts/: add_2025_2026_scores.py  add_cache_and_cards.py  add_detailed_professional_majors.py  add_discipline_ratings_table.py  add_exam_fields.py  add_has_graduate.py  add_missing_engineering_majors.py  add_preference_weights.py  add_score_lines_for_new_majors.py  backfill_enrollment.py  clean_noise_majors.py  crawl_985_score_lines.py  crawl_985_v2.py  crawl_985_v3.py  crawl_985_v4.py  crawl_kaoyan_national_lines.py  crawl_kaoyan_school_scores.py  crawl_kaoyan_schools.py  crawl_yz_majors.py  enrich_school_levels.py  enrich_school_locations.py  expand_data.py  fetch_yz_graduate_majors.py  finalize_official_schools.py  fix_exam_subjects.py  fix_school_levels.py  fix_school_provinces.py  fix_server_levels.py  import_branch_211_schools.py  import_military_schools.py  import_missing_regular_schools.py  import_missing_score_lines.py  import_national_lines.py  import_school_scores.py  import_score_lines_from_kaoyan.py  import_yantu_schools.py  match_official_schools.py  ocr_school_list.py  populate_school_majors.py  reclassify_schools.py  (+4 more)
backend/seed_data/: seed_schools.py
docs/: TODO-FIXES.md  (+5 more)
(+91 files in other folders)
