[tool.poetry]
name = "gradschool-advisor"
version = "0.1.0"
description = "考研院校与专业智能决策辅助系统"
authors = ["dev"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
openai = "^1.57.0"
chromadb = "^0.5.0"
httpx = "^0.28.0"
beautifulsoup4 = "^4.12.0"
lxml = "^5.3.0"
apscheduler = "^3.10.0"
python-dotenv = "^1.0.0"
aiofiles = "^24.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.0"

[tool.poetry.scripts]
dev = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
